hphp/hack/test/typecheck/new_inference/eager_solve/array_append_good.php.like_types.exp
File "array_append_good.php", line 52, characters 18-22:
Invalid argument (Typing[4110])
File "array_append_good.php", line 8, characters 25-32:
Expected arraykey
File "array_append_good.php", line 41, characters 9-11:
But got dynamic because it is an unenforceable type
File "array_append_good.php", line 56, characters 18-27:
Invalid argument (Typing[4110])
File "array_append_good.php", line 8, characters 25-32:
Expected arraykey
File "array_append_good.php", line 46, characters 10-12:
But got dynamic because it is an unenforceable type
File "array_append_good.php", line 59, characters 18-22:
Invalid argument (Typing[4110])
File "array_append_good.php", line 8, characters 25-32:
Expected arraykey
File "array_append_good.php", line 42, characters 7-9:
But got dynamic because it is an unenforceable type
